// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthLink - authenticated 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-header__account-link"
    data-testid="auth-link"
    href="/auth/signout"
    id="sign-out-link"
  >
    Sign out
  </a>
</DocumentFragment>
`;

exports[`AuthLink - configuring 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-header__account-link"
    data-testid="auth-link"
    href="/auth"
    id="sign-in-link"
  >
    Sign in
  </a>
</DocumentFragment>
`;

exports[`AuthLink - unauthenticated 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-header__account-link"
    data-testid="auth-link"
    href="/auth"
    id="sign-in-link"
  >
    Sign in
  </a>
</DocumentFragment>
`;
